# splunk-datalake

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SCRIPTS.md  TODO.md  classes.py  compose.yml  config.py  default copy.yml  default.yml  down-up-svc.sh  hec.py  ingest_action.txt  main.py  pyproject.toml  requirements.txt  serverclass.conf  serverclasse.yml  smartstore.yml  so1.yml  spl.sh
app/: classes.py  config.py  main.py
app/default/: commands.conf
assets/: DDAA_A.avif
configs/: so1.yml  uf.yml
configs/docker/: Dockerfile  set-ingest-actions.sh
configs/python/: app.ini
configs/splunk/: app.ini  ds1.yml  so1-restore.yml  so1.yml  uf.yml
deployment-apps/: double-speed.spl  normal.spl  unlimited-speed.spl
deployment-apps/double-speed/local/: inputs.conf  limits.conf
deployment-apps/normal/local/: inputs.conf  limits.conf
deployment-apps/unlimited-speed/local/: inputs.conf
include/: uf.yml
my-apps/: double-speed.spl  douple-speed.spl  forward-to-so1.spl  normal.spl  unlimited-speed.spl
my-apps/double-speed/local/: inputs.conf
my-apps/forward-to-so1/local/: outputs.conf
my-apps/normal/local/: inputs.conf
my-apps/unlimited-speed/local/: inputs.conf
scripts/: create-rfs-dest.sh  down-up-svc.sh  minio-init.sh  roll.sh
