[project]
name = "Splunk-DataLake"
dynamic = ["version"]
dependencies = [
"configparser",
"jsonlines",
"minio",
"pre-commit",
"requests",
"splunk-sdk",
"urllib3",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
multi_line_output = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
